# bubblepy

./: .flake8  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  Contributing.md  MVP_TASKS.md  MVP_TEST_PLAN.md  PYTHON_FEASIBILITY.md  ProjectStructure.md  README.md  __init__.py  bubblepy-improvements.md  bubbletea-improvements.md  commands.py  exec.py  keys.py  log.py  logging.py  messages.py  model.py  mouse.py  pyproject.toml  renderer.py  screen.py  setup.py  tea.py
.github/workflows/: python.yml
docs/plans/: 2026-03-09-bubblepy-rebrand.md
examples/: basics.py  exec.py  form.py  http.py  mouse.py  realtime.py  send_msg.py  simple.py  views.py
tests/: conftest.py  test_commands.py  test_keys.py  test_mouse.py  test_program.py  test_renderer.py  test_screen.py
tutorials/python-basics/: README.md
tutorials/python-commands/: README.md
